sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:10: error: value -= is not a member of Int
        j-=1
         ^